Second attempt at Hangman

--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
   <body>
  <h1><center>Hangman Game</center></h1>
  <h2><center>Can you guess the word?</center></h2>
- <div id="hangmanletters"></div>
-    <script src="assets/javascript/script.js"></script>
+ <h2></h2>
+ <div class id="hangManLetters">
+    <a id="a">A</a>
+    <a id="b">B</a>
+    <a id="c">C</a>
+    <a id="d">D</a>
+    <a id="e">E</a>
+    <a id="f">F</a>
+    <a id="g">G</a>
+    <a id="h">H</a>
+    <a id="i">I</a>
+    <a id="j">J</a>
+    <a id="k">K</a>
+    <a id="l">L</a>
+    <a id="m">M</a>
+        <br>
+    <a id="n">N</a>
+    <a id="o">O</a>
+    <a id="p">P</a>
+    <a id="q">Q</a>
+    <a id="r">R</a>
+    <a id="s">S</a>
+    <a id="t">T</a>
+    <a id="u">U</a>
+    <a id="v">V</a>
+    <a id="w">W</a>
+    <a id="x">X</a>
+    <a id="y">Y</a>
+    <a id="z">Z</a>
+    </div>
+<!--     <div id="hangmanletters"></div>
+    <textarea type="text" onkeypress="this.value=this.value + 'onkeypress '"></textarea><br/>
+    <textarea type="text" onkeydown="this.value=this.value + 'onkeydown '" ></textarea><br/>
+    <textarea type="text" onkeyup="this.value=this.value + 'onkeyup '" ></textarea><br/> -->
+    <br>
+    <br>
+    <br>
+      <script src="assets/javascript/script.js"></script>
+<!--           <button center class="btn btn-default btn-lg dropdown-toggle" id="myBtn" type="button" aria-haspopup="true" aria-expanded="false">
+          </button> -->
   </body>  
 </html>
