--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</div>
 	</div>	
 
-		<div id="name">
+<!-- 		<div id="name">
 	</div>
 
 		<p id="categoryName"></p>
@@ -121,7 +121,7 @@
 				<li class="guess">_</li>
 			</ul>
 		</div>
-
+ -->
 
 
 
@@ -162,6 +162,22 @@
   <!-- Bootstrap's javascript file that allows the dropdown menu to work  -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <div>
+
+
+ <!-- Container Div -->
+  <div class="container">
+
+    <!-- Section 1: Navbar-->
+    <nav class="navbar navbar-default">
+
+      <!-- Place Fluid Container in Navbar -->
+      <div class="container-fluid">
+
+        <!-- Designate a navbar heading -->
+        <div class="navbar-header col-sm-9"><h4> </h4></div>
+
+        <div class="col-sm-9"><h1></h1></div>
+
 	 <footer>
                 <div class="container">
                   &copy; 2017 Elana Celano
